--- a/css/styles.css
+++ b/css/styles.css
@@ -1,67 +1,273 @@
-@charset "UTF-8";
-/*Обнуляю налаштування css */
-* {
-  padding: 0;
-  margin: 0;
-  border: 0;
+/* @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"); */
+body {
+  font-family: var(--main-ff);
+  color: var(--text-akcent-color);
 }
-
-*, *:before, *:after {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+.wrapper {
+  min-height: 100%;
+  overflow: hidden;
 }
-
-:focus, :active {
-  outline: none;
-}
-
-a:focus, a:active {
-  outline: none;
-}
-
-nav, footer, header, aside {
-  display: block;
-}
-
-html, body {
-  height: 100%;
+header {
+  position: fixed;
+  display: flex;
+ 
   width: 100%;
-  font-size: 100%;
-  line-height: 1;
+  height: 80px;
+  z-index: 10;
+  align-items: center;
+  background-color: var(--white-bg-color);
+}
+.wrapper__menu {
+  max-width: 1200px;
+  display: flex;
+  margin: 0px auto;
+  padding: 0 0 0 15px;
+
+  width: 100%;
+  flex: 1 1 auto;
+  justify-content: space-between;
+  align-items: center;
+
+  min-height: 80px;
+  /* border: 3px solid rgba(0,0,0,.2); */
+}
+.logo {
+  font-family: var(--logo-ff);
+  font-weight: 700;
+  font-size: 26px;
+}
+.logo span {
+  color: #2196f3;
+}
+.logo-black {
+  padding: 0px 68px 4px 0;
+  color: #000;
 }
 
-input, button, textarea {
-  font-family: inherit;
+.logo-white {
+  color: #fff;
 }
 
-input::-ms-clear {
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+h2{
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 42px;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: #212121;
+  padding-bottom: 50px;
+}
+
+
+.menu {
+  display: flex;
+  align-items: baseline;
+}
+
+nav .menu__items {
+  align-items: center;
+}
+.menu__items {
+  display: flex;
+}
+.menu__items-kontakt{
+  margin: 0 -10px 0 0;
+}
+
+.menu__item {
+  padding: 0px 25px;
+  font-weight: 500;
+}
+.menu__item a{
+  color: currentColor;
+}
+.menu__item:hover a{
+  color: #2196f3;
+}
+.menu__item:last-child {
+  padding: 0 25px;
+}
+/*----------section-1-------------------*/
+.section-1 {
+  margin-top: 80px;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  width: 1600px;
+  height: 600px;
+  background-color: #2f303a;
+}
+.section-1__wrapper {
+  max-width: 696px;
+  max-height: 120px;
+}
+h1 {
+  padding: 0 0 44px 0;
+  text-transform: uppercase;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 44px;
+  line-height: 60px;
+  line-height: 116%;
+  text-align: center;
+  letter-spacing: 5px;
+  font-weight: 900;
+  text-decoration: ;
+  /*Font style: Black
+Font size: 44px
+Line height: 60px
+Line height: 116%
+Align: Center
+Vertical align: Top
+Letter spacing: 6%*/
+  color: #fff;
+}
+.section-1__button {
+  background-color: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  color: #fff;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  padding: 10px 32px;
+  border-radius: 4px;
+  transition-duration: 0.1s;
+}
+.section-1__button:hover {
+  background: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+/*--------------section-2------------------------*/
+.wrapper-main-s2s3{
+  width: 1200px;
+  padding: 92px 15px 95px;
+}
+.section-2{ 
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  text-align: left;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 1200px;
+
+  flex-direction: column;
+  margin: 0px 0px 94px 0;
+ /*
+  border-radius: 4px;
+
+
+
+
+  flex: 1 1 auto;
+*/
+}
+.section-2__items{
+  display: flex;
+  justify-content: space-between;
+}
+.section-2__item{
+  flex-basis: 23%;
+  
+  justify-content: right;
+}
+.section-2__item-title{
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  padding-bottom: 8px;
+}
+.section-2__item-content{
+  font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 24px;
+/* or 171% */
+
+letter-spacing: 0.03em;
+
+color: #757575;
+}
+.h2-hidden{
   display: none;
 }
-
-button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
+.section-3{
+  /*padding: 0 0 94px 0;*/
 }
 
-a, a:visited {
-  text-decoration: none;
+.wrapper-main-s4{
+  display:flex;
+
+  width: 1600px;
+  height: 648px;
+  background-color: #F5F4FA;
+  justify-content: center;
 }
 
-a:hover {
-  text-decoration: none;
-}
+.section-4{
+  /*border: 10px solid #ece89d;*/
+  display:flex;
+  flex-wrap:wrap;
+  padding-top: 94px;
 
-ul li {
-  list-style: none;
+  max-width: 1200px;
+  justify-content: center;
 }
-
-img {
-  vertical-align: top;
+.section-4__title{
+  flex: 0 1 100%;
 }
-
-h1, h2, h3, h4, h5, h6 {
-  font-size: inherit;
-  font-weight: inherit;
+.section-4__items{
+  width: 1200px;
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 94px;
 }
+.section-4__item-img{
+  padding-bottom: 30px;
+}
+.section-4__item-title{
+  font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 19px;
+/* identical to box height */
 
-/*---------------------------------*/
+text-align: center;
+letter-spacing: 0.03em;
+
+color: #212121;
+padding-bottom: 10px;
+}
+.section-4__item-content{
+  font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 19px;
+/* identical to box height */
+
+text-align: center;
+letter-spacing: 0.03em;
+
+color: #757575;
+}
+.card{
+  width: 270;
+  height: 368;
+  background-color: #FFF;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+footer {
+  background-color: #2f303a;
+}
