--- a/css/styles.css
+++ b/css/styles.css
@@ -1,52 +1,6 @@
 /* @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"); */
-body {
-  font-family: var(--main-ff);
-  color: var(--text-akcent-color);
-}
-.wrapper {
-  min-height: 100%;
-  overflow: hidden;
-}
-header {
-  position: fixed;
-  display: flex;
- 
-  width: 100%;
-  height: 80px;
-  z-index: 10;
-  align-items: center;
-  background-color: var(--white-bg-color);
-}
-.wrapper__menu {
-  max-width: 1200px;
-  display: flex;
-  margin: 0px auto;
-  padding: 0 0 0 15px;
 
-  width: 100%;
-  flex: 1 1 auto;
-  justify-content: space-between;
-  align-items: center;
 
-  min-height: 80px;
-  /* border: 3px solid rgba(0,0,0,.2); */
-}
-.logo {
-  font-family: var(--logo-ff);
-  font-weight: 700;
-  font-size: 26px;
-}
-.logo span {
-  color: #2196f3;
-}
-.logo-black {
-  padding: 0px 68px 4px 0;
-  color: #000;
-}
-
-.logo-white {
-  color: #fff;
-}
 
 main {
   display: flex;
@@ -66,34 +20,7 @@ h2{
 }
 
 
-.menu {
-  display: flex;
-  align-items: baseline;
-}
 
-nav .menu__items {
-  align-items: center;
-}
-.menu__items {
-  display: flex;
-}
-.menu__items-kontakt{
-  margin: 0 -10px 0 0;
-}
-
-.menu__item {
-  padding: 0px 25px;
-  font-weight: 500;
-}
-.menu__item a{
-  color: currentColor;
-}
-.menu__item:hover a{
-  color: #2196f3;
-}
-.menu__item:last-child {
-  padding: 0 25px;
-}
 /*----------section-1-------------------*/
 .section-1 {
   margin-top: 80px;
@@ -120,7 +47,7 @@ h1 {
   text-align: center;
   letter-spacing: 5px;
   font-weight: 900;
-  text-decoration: ;
+
   /*Font style: Black
 Font size: 44px
 Line height: 60px
@@ -128,23 +55,24 @@ Line height: 116%
 Align: Center
 Vertical align: Top
 Letter spacing: 6%*/
-  color: #fff;
+  color: var(--text-invert-akcent-color);
 }
 .section-1__button {
-  background-color: #2196f3;
+  background-color:  var(--text-blu-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  color: #fff;
+  color: var(--text-invert-akcent-color);
   font-weight: 700;
   font-size: 16px;
   line-height: 30px;
   padding: 10px 32px;
   border-radius: 4px;
-  transition-duration: 0.1s;
+  transition-duration: 0.2s;
 }
 .section-1__button:hover {
-  background: #188ce8;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
+  background: var(--text-blu-hover-color);
+  color: var(--text-invert-color);
+  /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); */
+  /* border-radius: 4px; */
 }
 /*--------------section-2------------------------*/
 .wrapper-main-s2s3{
@@ -162,14 +90,6 @@ Letter spacing: 6%*/
 
   flex-direction: column;
   margin: 0px 0px 94px 0;
- /*
-  border-radius: 4px;
-
-
-
-
-  flex: 1 1 auto;
-*/
 }
 .section-2__items{
   display: flex;
@@ -260,6 +180,7 @@ text-align: center;
 letter-spacing: 0.03em;
 
 color: #757575;
+padding-bottom: 30px;
 }
 .card{
   width: 270;
@@ -267,7 +188,4 @@ color: #757575;
   background-color: #FFF;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-}
-footer {
-  background-color: #2f303a;
 }
