--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -8,15 +8,18 @@ body{
 }
 .container {
   /* margin-top: 80px; */
-  display: flex;
+  /* display: flex; */
   max-width: 1200px;
   
 }
 .galery {
- 
+  display: flex;
+  flex-wrap: wrap;
   max-width: 1200px;
   flex: 0 1 33.33%;
-  border: 10px solid #ece89d;
+  justify-content: space-between;
+  /* border: 10px solid #ece89d; */
+  
   
 }
 .galery > li {
@@ -26,22 +29,45 @@ body{
 .card{
   /* padding: 10px; */
 
-  border: 1px solid red;
+  border: 1px solid var(--button-color);
+  /* margin-right: 30px; */
+  margin-bottom: 30px;
 }
+/* .card:nth-child(3n+3){
+  margin-right: 0px;
+  
+} */
+.card__subscribe{
+  margin: 0 24px;
+  padding: 20px 0;
 
+}
+.card__subscribe > h3{
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+.card__subscribe > p{
+  line-height: 1.88;
+  letter-spacing: 0.03em;
+  color: var(--text-color);
+}
 main{
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .filters {
+  display: flex;
   /* margin-top: 81px; */
-  /* margin: 81px auto 0 auto; */
-  margin-top: 81px;
+  margin: 81px auto 0 auto;
+  /* margin-top: 81px; */
+  /* justify-content: space-between; */
   /* display: block; */
-  /* text-align: center;
+  /* text-align: center;*/
   align-items: center;
-  justify-content: center; */
+    /* justify-content: center;  */
   /* width: 1600px;
   height: 600px; */
 
