--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -29,9 +29,9 @@ body{
 .card{
   /* padding: 10px; */
 
-  border: 1px solid var(--button-color);
+  border: 1px solid var(--white-background);
   /* margin-right: 30px; */
-  margin-bottom: 30px;
+3  margin-bottom: 30px;
 }
 /* .card:nth-child(3n+3){
   margin-right: 0px;
@@ -51,7 +51,7 @@ body{
 .card__subscribe > p{
   line-height: 1.88;
   letter-spacing: 0.03em;
-  color: var(--text-color);
+  color: var(--context-color);
 }
 main{
   display: flex;
@@ -61,7 +61,7 @@ main{
 .filters {
   display: flex;
   /* margin-top: 81px; */
-  margin: 81px auto 0 auto;
+  margin: 174px auto 3px;
   /* margin-top: 81px; */
   /* justify-content: space-between; */
   /* display: block; */
@@ -74,13 +74,15 @@ main{
   /* position: fixed; */
   /* border: 1px solid red; */
 }
-.filters > ul{
+.filter{
   display: flex;
+
+  margin: 0px auto;
 }
 .filter__button  {
-  background-color:  var(--button-color);
+  background-color:  var(--white-background);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  color: var(--text-akcent-color);
+  color: var(--main-color);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.63;
@@ -90,8 +92,8 @@ main{
 }
 .filter__button:hover,
 .filter__button:active {
-  background-color:  var(--text-blu-color); 
-  color: var(--text-invert-akcent-color);
+  background-color:  var(--chromatic-usual); 
+  color: var(--white-acsent);
 }
 .galery {
   display: flex;
